--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-﻿numpy==1.19.2
+numpy>=1.23.0
 Flask==2.1.3
 Werkzeug==0.15.5
 gunicorn==20.1.0
-scikit-learn==0.22.2
-pandas==1.2.3
+pandas>=1.5.0
+scikit-learn>=1.2.0
 jsonify==0.5
 flask-cors==3.0.10
 markup==1.1
