--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-numpy>=1.23.0
+numpy>=1.24.0
 Flask==2.1.3
-Werkzeug==0.15.5
+Werkzeug==2.0.3 
 gunicorn==20.1.0
 pandas>=1.5.0
 scikit-learn>=1.2.0
 jsonify==0.5
 flask-cors==3.0.10
-markup==1.1
-escape==1.0
+beautifulsoup4==4.12.2
